# VideoPipeline

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml  run_studio.bat
docs/: actions.md  diarization_bench.md  gondull-control-plane.md  machine-notes.md  privacy.md  studio.md  windows_rocm_torchcodec.md
profiles/: gaming.yaml  gaming_assemblyai.yaml  gaming_nvidia.yaml  gaming_shorts_45s.yaml
scripts/: build_exe.ps1  diagnose_torchcodec.py  doctor_torchcodec.ps1  gpu_smoke_test.py  inspect_dll_imports.py  install_ffmpeg_shared.ps1  rebuild_torchcodec_rocm.ps1  run_studio.ps1  run_studio.sh  setup_ffmpeg_shared.ps1  view_transcript.py
sources/: watchlist.example.yaml
tests/: test_analysis_runner_freshness.py  test_analysis_tasks.py  test_audio_events.py  test_boundaries.py  test_chat.py  test_cli.py  test_clip_variants.py  test_diarization_perf.py  test_director.py  test_exporter.py  test_highlights.py  test_ingest.py  test_ingest_v2.py  test_launcher.py  test_layouts.py  test_llm_client.py  test_metadata.py  test_profile_defaults.py  test_publisher_api.py  test_publisher_jobs.py  test_publisher_sanitize.py  test_range.py  test_reaction_audio.py  test_sentences.py  test_silence.py  test_source_scout.py  test_speech_rerank.py  test_studio_actions_api.py  test_studio_jobs.py  test_subtitles.py  test_templates.py  test_transcription_assemblyai_backend.py  test_transcription_compat.py  test_transcription_nemo_backend.py
tools/: codex-tabs.ps1  diarization_bench.py  senko_runner.py  setup_twitch_api.ps1  (+4 more)
(+104 files in other folders)
