[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "videopipeline"
version = "0.0.1"
description = "Personal highlight extraction + short-form export pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.23"]

[project.scripts]
vp = "videopipeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
