[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "videopipeline"
version = "0.0.2"
description = "Personal highlight extraction + short-form export pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "PyYAML>=6.0",
    "keyring>=24.3",
    "requests>=2.31",
    "google-auth>=2.29",
    "google-auth-oauthlib>=1.2",
    "yt-dlp>=2024.1.0",
    "chat-downloader>=0.2.0",
]

[project.scripts]
vp = "videopipeline.cli:main"

[project.optional-dependencies]
whisper = ["faster-whisper>=1.0.0"]

dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"videopipeline" = ["studio/static/*"]
